feat: add "create user" api func
