# docs/swagger.json
@@ -353,9 +353,18 @@
     "definitions": {
         "reqdto.CreateUserReq": {
             "type": "object",
+            "required": [
+                "account",
+                "email",
+                "password",
+                "phone",
+                "userName"
+            ],
             "properties": {
                 "account": {
                     "type": "string",
+                    "maxLength": 20,
+                    "minLength": 8,
                     "example": "jeff7777"
                 },
                 "email": {
@@ -364,7 +373,9 @@
                 },
                 "password": {
                     "type": "string",
-                    "example": "jeffpwd"
+                    "maxLength": 20,
+                    "minLength": 8,
+                    "example": "password"
                 },
                 "phone": {
                     "type": "string",
@@ -372,6 +383,8 @@
                 },
                 "userName": {
                     "type": "string",
+                    "maxLength": 20,
+                    "minLength": 4,
                     "example": "Jeff"
                 }
             }
