# src/usecase/handler/encryption_handler.go
@@ -1,0 +1,6 @@
+package handler
+
+type EncryptionHandler interface {
+	HashPassword(password string) (string, error)
+	CheckPasswordHash(password, hash string) bool
+}
